tests/fixtures/invalid/pow_str_bytes_set.py
# Cannot call pow() with Str, Bytes, Set[int]
x = pow("hello", b"hello", {1, 2, 3})
